--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -45,13 +45,13 @@
 
             //上传图片接口
             ,uploadImage: {
-                url: '/upload/image' //（返回的数据格式见下文）
+                url: '/aj/upload/image' //（返回的数据格式见下文）
                 ,type: 'post' //默认post
             }
 
             //上传文件接口
             ,uploadFile: {
-                url: '/upload/file' //（返回的数据格式见下文）
+                url: '/aj/upload/file' //（返回的数据格式见下文）
                 ,type: 'post' //默认post
             }
 
