--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -60,6 +60,10 @@
                 alias: 'code'
                 ,title: '代码'
                 ,icon: '&#xe64e;'
+            },{
+                alias: 'video'
+                ,title: '视频'
+                ,icon: '&#xe6ed;'
             }]
 
             //,brief: true //是否简约模式（若开启则不显示主面板）
@@ -73,7 +77,7 @@
             ,isgroup: true //是否开启群组
             //,min: true //是否始终最小化主面板，默认false
             ,notice: true //是否开启桌面消息提醒，默认false
-            ,voice: true //声音提醒，默认开启，声音文件为：default.wav
+            ,voice: 'default.wav' //声音提醒，默认开启，声音文件为：default.wav
 
             ,msgbox: layui.cache.dir + 'css/modules/layim/html/msgbox.html' //消息盒子页面地址，若不开启，剔除该项即可
             ,find: layui.cache.dir + 'css/modules/layim/html/find.html' //发现页面地址，若不开启，剔除该项即可
