--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -21,20 +21,21 @@
         //连接成功时触发
         socket.onopen = function(){
             socket.send(JSON.stringify({
-                userId: 1,
-                data: "ok"
+                action: 'open',
+                data: {
+                    userId: <?=$userId?>
+                }
             }));
         };
 
         //监听收到的消息
         socket.onmessage = function(res){
-            console.log(res);
             let data = JSON.parse(res.data);
             let obj = {};
             if(data.type === 'group'){
                 obj = {
                     username: data.userName
-                    ,avatar: 'http://tp4.sinaimg.cn/2145291155/180/5601307179/1'
+                    ,avatar: data.avatar
                     ,id: data.userId
                     ,type: data.type
                     ,content: data.content
@@ -42,7 +43,7 @@
             } else {
                 obj = {
                     username: data.userName
-                    ,avatar: 'http://tp4.sinaimg.cn/2145291155/180/5601307179/1'
+                    ,avatar: data.avatar
                     ,id: data.userId
                     ,type: data.type
                     ,content: data.content
@@ -53,19 +54,6 @@
             console.log(obj);
             layim.getMessage(obj);
         };
-
-        //演示自动回复
-        let autoReplay = [
-            '您好，我现在有事不在，一会再和您联系。',
-            '你没发错吧？face[微笑] ',
-            '洗澡中，请勿打扰，偷窥请购票，个体四十，团体八折，订票电话：一般人我不告诉他！face[哈哈] ',
-            '你好，我是主人的美女秘书，有什么事就跟我说吧，等他回来我会转告他的。face[心] face[心] face[心] ',
-            'face[威武] face[威武] face[威武] face[威武] ',
-            '<（@￣︶￣@）>',
-            '你要和我说话？你真的要和我说话？你确定自己想说吗？你一定非说不可吗？那你说吧，这是自动回复。',
-            'face[黑线]  你慢慢说，别急……',
-            '(*^__^*) face[嘻嘻] ，是贤心吗？'
-        ];
 
         //基础配置
         layim.config({
@@ -99,13 +87,7 @@
                 alias: 'code'
                 ,title: '代码'
                 ,icon: '&#xe64e;'
-            },{
-                alias: 'video'
-                ,title: '视频'
-                ,icon: '&#xe6ed;'
             }]
-
-            //,brief: true //是否简约模式（若开启则不显示主面板）
 
             //,title: 'WebIM' //自定义主面板最小化时的标题
             //,right: '100px' //主面板相对浏览器右侧距离
@@ -149,69 +131,71 @@
         //监听layim建立就绪
         layim.on('ready', function(res){
 
-            layim.msgbox(5); //模拟消息盒子有新消息，实际使用时，一般是动态获得
+            //layim.msgbox(5); //模拟消息盒子有新消息，实际使用时，一般是动态获得
 
             //添加好友（如果检测到该socket）
-            layim.addList({
-                type: 'group'
-                ,avatar: "http://tva3.sinaimg.cn/crop.64.106.361.361.50/7181dbb3jw8evfbtem8edj20ci0dpq3a.jpg"
-                ,groupname: 'Angular开发'
-                ,id: "12333333"
-                ,members: 0
-            });
-            layim.addList({
-                type: 'friend'
-                ,avatar: "http://tp2.sinaimg.cn/2386568184/180/40050524279/0"
-                ,username: '冲田杏梨'
-                ,groupid: 2
-                ,id: "1233333312121212"
-                ,remark: "本人冲田杏梨将结束AV女优的工作"
-            });
-
-            setTimeout(function(){
-                //接受消息（如果检测到该socket）
-                layim.getMessage({
-                    username: "Hi"
-                    ,avatar: "http://qzapp.qlogo.cn/qzapp/100280987/56ADC83E78CEC046F8DF2C5D0DD63CDE/100"
-                    ,id: "10000111"
-                    ,type: "friend"
-                    ,content: "临时："+ new Date().getTime()
-                });
-            }, 3000);
+            // layim.addList({
+            //     type: 'group'
+            //     ,avatar: "http://tva3.sinaimg.cn/crop.64.106.361.361.50/7181dbb3jw8evfbtem8edj20ci0dpq3a.jpg"
+            //     ,groupname: 'Angular开发'
+            //     ,id: "12333333"
+            //     ,members: 0
+            // });
+            // layim.addList({
+            //     type: 'friend'
+            //     ,avatar: "http://tp2.sinaimg.cn/2386568184/180/40050524279/0"
+            //     ,username: '冲田杏梨'
+            //     ,groupid: 2
+            //     ,id: "1233333312121212"
+            //     ,remark: "本人冲田杏梨将结束AV女优的工作"
+            // });
+            //
+            // setTimeout(function(){
+            //     //接受消息（如果检测到该socket）
+            //     layim.getMessage({
+            //         username: "Hi"
+            //         ,avatar: "http://qzapp.qlogo.cn/qzapp/100280987/56ADC83E78CEC046F8DF2C5D0DD63CDE/100"
+            //         ,id: "10000111"
+            //         ,type: "friend"
+            //         ,content: "临时："+ new Date().getTime()
+            //     });
+            // }, 3000);
         });
 
         //监听发送消息
         layim.on('sendMessage', function(data){
             let To = data.to;
-            //console.log(data);
+            console.log(data);
 
-            if(To.type === 'friend'){
-                layim.setChatStatus('<span style="color:#FF5722;">对方正在输入。。。</span>');
-            }
+            socket.send(JSON.stringify({action: 'chat', data: data}));
+
+            // if(To.type === 'friend'){
+            //     layim.setChatStatus('<span style="color:#FF5722;">对方正在输入。。。</span>');
+            // }
 
             //演示自动回复
-            setTimeout(function(){
-                var obj = {};
-                if(To.type === 'group'){
-                    obj = {
-                        username: '模拟群员'+(Math.random()*100|0)
-                        ,avatar: layui.cache.dir + 'images/face/'+ (Math.random()*72|0) + '.gif'
-                        ,id: To.id
-                        ,type: To.type
-                        ,content: autoReplay[Math.random()*9|0]
-                    }
-                } else {
-                    obj = {
-                        username: To.name
-                        ,avatar: To.avatar
-                        ,id: To.id
-                        ,type: To.type
-                        ,content: autoReplay[Math.random()*9|0]
-                    };
-                    layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
-                }
-                layim.getMessage(obj);
-            }, 1000);
+            // setTimeout(function(){
+            //     var obj = {};
+            //     if(To.type === 'group'){
+            //         obj = {
+            //             username: '模拟群员'+(Math.random()*100|0)
+            //             ,avatar: layui.cache.dir + 'images/face/'+ (Math.random()*72|0) + '.gif'
+            //             ,id: To.id
+            //             ,type: To.type
+            //             ,content: autoReplay[Math.random()*9|0]
+            //         }
+            //     } else {
+            //         obj = {
+            //             username: To.name
+            //             ,avatar: To.avatar
+            //             ,id: To.id
+            //             ,type: To.type
+            //             ,content: autoReplay[Math.random()*9|0]
+            //         };
+            //         layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
+            //     }
+            //     layim.getMessage(obj);
+            // }, 1000);
         });
 
         //监听查看群员
@@ -223,18 +207,18 @@
         layim.on('chatChange', function(res){
             let type = res.data.type;
             console.log(res.data.id);
-            if(type === 'friend'){
-                //模拟标注好友状态
-                //layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
-            } else if(type === 'group'){
-                //模拟系统消息
-                layim.getMessage({
-                    system: true
-                    ,id: res.data.id
-                    ,type: "group"
-                    ,content: '模拟群员'+(Math.random()*100|0) + '加入群聊'
-                });
-            }
+            // if(type === 'friend'){
+            //     //模拟标注好友状态
+            //     //layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
+            // } else if(type === 'group'){
+            //     //模拟系统消息
+            //     layim.getMessage({
+            //         system: true
+            //         ,id: res.data.id
+            //         ,type: "group"
+            //         ,content: '模拟群员'+(Math.random()*100|0) + '加入群聊'
+            //     });
+            // }
         });
     });
 </script>
