--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -60,13 +60,13 @@
 
             //初始化接口
             init: {
-                url: '/json/getList.json'
+                url: '/aj/getList'
                 ,data: {}
             }
 
             //查看群员接口
             ,members: {
-                url: '/json/getMembers.json'
+                url: '/aj/getMembers'
                 ,data: {}
             }
 
