--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -12,6 +12,7 @@
 <body>
 
 <script src="/layui/layui.js"></script>
+<script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 <script>
 
     layui.use('layim', function(layim){
@@ -28,9 +29,7 @@
             }));
         };
 
-        //监听收到的消息
-        socket.onmessage = function(res){
-            let data = JSON.parse(res.data);
+        function getMessage(data) {
             let obj = {};
             if(data.type === 'group'){
                 obj = {
@@ -51,8 +50,20 @@
                 layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
             }
 
-            console.log(obj);
             layim.getMessage(obj);
+        }
+
+        //监听收到的消息
+        socket.onmessage = function(res){
+            let data = JSON.parse(res.data);
+            switch (data.action) {
+                case 'chat':
+                    getMessage(data);
+                    break;
+                case 'friend_online_status':
+                    console.log(data);
+            }
+
         };
 
         //基础配置
@@ -108,7 +119,19 @@
 
         //监听在线状态的切换事件
         layim.on('online', function(data){
-            //console.log(data);
+            $.ajax({
+                url: '/aj/changeMyStatus',
+                method: 'post',
+                data: {
+                    'status': data
+                },
+                success: function(res) {
+                    console.log(res);
+                },
+                error: function(res) {
+                    console.log(res);
+                }
+            });
         });
 
         //监听签名修改
@@ -130,95 +153,49 @@
 
         //监听layim建立就绪
         layim.on('ready', function(res){
-
             //layim.msgbox(5); //模拟消息盒子有新消息，实际使用时，一般是动态获得
-
-            //添加好友（如果检测到该socket）
-            // layim.addList({
-            //     type: 'group'
-            //     ,avatar: "http://tva3.sinaimg.cn/crop.64.106.361.361.50/7181dbb3jw8evfbtem8edj20ci0dpq3a.jpg"
-            //     ,groupname: 'Angular开发'
-            //     ,id: "12333333"
-            //     ,members: 0
-            // });
-            // layim.addList({
-            //     type: 'friend'
-            //     ,avatar: "http://tp2.sinaimg.cn/2386568184/180/40050524279/0"
-            //     ,username: '冲田杏梨'
-            //     ,groupid: 2
-            //     ,id: "1233333312121212"
-            //     ,remark: "本人冲田杏梨将结束AV女优的工作"
-            // });
-            //
-            // setTimeout(function(){
-            //     //接受消息（如果检测到该socket）
-            //     layim.getMessage({
-            //         username: "Hi"
-            //         ,avatar: "http://qzapp.qlogo.cn/qzapp/100280987/56ADC83E78CEC046F8DF2C5D0DD63CDE/100"
-            //         ,id: "10000111"
-            //         ,type: "friend"
-            //         ,content: "临时："+ new Date().getTime()
-            //     });
-            // }, 3000);
         });
 
         //监听发送消息
         layim.on('sendMessage', function(data){
             let To = data.to;
             console.log(data);
-
             socket.send(JSON.stringify({action: 'chat', data: data}));
 
             // if(To.type === 'friend'){
             //     layim.setChatStatus('<span style="color:#FF5722;">对方正在输入。。。</span>');
             // }
-
-            //演示自动回复
-            // setTimeout(function(){
-            //     var obj = {};
-            //     if(To.type === 'group'){
-            //         obj = {
-            //             username: '模拟群员'+(Math.random()*100|0)
-            //             ,avatar: layui.cache.dir + 'images/face/'+ (Math.random()*72|0) + '.gif'
-            //             ,id: To.id
-            //             ,type: To.type
-            //             ,content: autoReplay[Math.random()*9|0]
-            //         }
-            //     } else {
-            //         obj = {
-            //             username: To.name
-            //             ,avatar: To.avatar
-            //             ,id: To.id
-            //             ,type: To.type
-            //             ,content: autoReplay[Math.random()*9|0]
-            //         };
-            //         layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
-            //     }
-            //     layim.getMessage(obj);
-            // }, 1000);
         });
 
         //监听查看群员
         layim.on('members', function(data){
-            //console.log(data);
+
         });
 
         //监听聊天窗口的切换
         layim.on('chatChange', function(res){
             let type = res.data.type;
-            console.log(res.data.id);
-            // if(type === 'friend'){
-            //     //模拟标注好友状态
-            //     //layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
-            // } else if(type === 'group'){
-            //     //模拟系统消息
-            //     layim.getMessage({
-            //         system: true
-            //         ,id: res.data.id
-            //         ,type: "group"
-            //         ,content: '模拟群员'+(Math.random()*100|0) + '加入群聊'
-            //     });
-            // }
+            $.ajax({
+                url: '/aj/getUserStatus',
+                method: 'get',
+                data: {
+                    id: res.data.id
+                },
+                success: function(res) {
+                    if (res.data === 'online') {
+                        if ('friend' === type) {
+                            layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
+                        }
+                    } else {
+                        if ('friend' === type) {
+                            layim.setChatStatus('<span style="color:#555;">离线</span>');
+                        }
+                    }
+                },
+                error: function(res) {
+                    console.log(res);
+                }
+            });
         });
     });
 </script>
