--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -27,11 +27,22 @@
                     userId: <?=$userId?>
                 }
             }));
+
+            $.ajax({
+                url: '/aj/getMessage',
+                method: 'get',
+                success: function(res) {
+                    console.log(res);
+                },
+                error: function(res) {
+                    console.log(res);
+                }
+            });
         };
 
         function getMessage(data) {
             let obj = {};
-            if(data.type === 'group'){
+            if (data.type === 'group') {
                 obj = {
                     username: data.userName
                     ,avatar: data.avatar
