--- a/app/view/index/index.phtml
+++ b/app/view/index/index.phtml
@@ -72,7 +72,7 @@
                 };
                 layim.setChatStatus('<span style="color:#FF5722;">在线</span>');
             }
-
+            console.log(obj);
             layim.getMessage(obj);
         }
 
