--- a/app/view/index/mobile.phtml
+++ b/app/view/index/mobile.phtml
@@ -15,19 +15,6 @@
         let mobile = layui.mobile
             ,layim = mobile.layim;
 
-        //演示自动回复
-        let autoReplay = [
-            '您好，我现在有事不在，一会再和您联系。',
-            '你没发错吧？face[微笑] ',
-            '洗澡中，请勿打扰，偷窥请购票，个体四十，团体八折，订票电话：一般人我不告诉他！face[哈哈] ',
-            '你好，我是主人的美女秘书，有什么事就跟我说吧，等他回来我会转告他的。face[心] face[心] face[心] ',
-            'face[威武] face[威武] face[威武] face[威武] ',
-            '<（@￣︶￣@）>',
-            '你要和我说话？你真的要和我说话？你确定自己想说吗？你一定非说不可吗？那你说吧，这是自动回复。',
-            'face[黑线]  你慢慢说，别急……',
-            '(*^__^*) face[嘻嘻] ，是贤心吗？'
-        ];
-
         layim.config({
             //上传图片接口
             uploadImage: {
@@ -53,7 +40,7 @@
         //创建一个会话
         layim.chat({
             id: 111111
-            ,name: '许闲心'
+            ,name: 'liubang'
             ,type: 'kefu' //friend、group等字符，如果是group，则创建的是群聊
             ,avatar: 'http://tp1.sinaimg.cn/1571889140/180/40030060651/1'
         });
@@ -61,31 +48,7 @@
 
         //监听发送消息
         layim.on('sendMessage', function(data){
-            let To = data.to;
-            //console.log(data);
 
-            //演示自动回复
-            setTimeout(function(){
-                let obj = {};
-                if(To.type === 'group'){
-                    obj = {
-                        username: '模拟群员'+(Math.random()*100|0)
-                        ,avatar: layui.cache.dir + 'images/face/'+ (Math.random()*72|0) + '.gif'
-                        ,id: To.id
-                        ,type: To.type
-                        ,content: autoReplay[Math.random()*9|0]
-                    }
-                } else {
-                    obj = {
-                        username: To.name
-                        ,avatar: To.avatar
-                        ,id: To.id
-                        ,type: To.type
-                        ,content: autoReplay[Math.random()*9|0]
-                    }
-                }
-                layim.getMessage(obj);
-            }, 1000);
         });
 
         //监听查看更多记录
