--- a/app/view/login/login.phtml
+++ b/app/view/login/login.phtml
@@ -28,7 +28,7 @@
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit lay-filter="form">立即提交</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
-                <button type="button" class="layui-btn layui-btn-primary">注册用户</button>
+                <a href="/reg" class="layui-btn">注册用户</a>
             </div>
         </div>
     </form>
