--- a/app/view/login/reg.phtml
+++ b/app/view/login/reg.phtml
@@ -38,7 +38,7 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit lay-filter="form">立即提交</button>
+                <button class="layui-btn" lay-submit lay-filter="formReg">立即提交</button>
                 <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </div>
@@ -48,7 +48,7 @@
         layui.use('form', function(){
             let form = layui.form;
             //监听提交
-            form.on('submit(form)', function(data){
+            form.on('submit(formReg)', function(data){
                 layer.msg(JSON.stringify(data.field));
                 return false;
             });
