--- a/app/view/login/reg.phtml
+++ b/app/view/login/reg.phtml
@@ -46,7 +46,7 @@
 
     <script>
         layui.use('form', function(){
-            let form = layui.form;
+            let form = layui.form();
             //监听提交
             form.on('submit(formReg)', function(data){
                 layer.msg(JSON.stringify(data.field));
