优化注册体验

--- a/app/view/login/login.phtml
+++ b/app/view/login/login.phtml
@@ -35,7 +35,7 @@
 
     <script>
         layui.use('form', function(){
-            let form = layui.form;
+            let form = layui.form();
             //监听提交
             // form.on('submit(form)', function(data){
             //     console.log(data);
