--- a/app/view/login/login.phtml
+++ b/app/view/login/login.phtml
@@ -8,6 +8,7 @@
     <title>webim登录</title>
     <link rel="stylesheet" href="/layui/css/layui.css">
     <script src="/layui/layui.js"></script>
+    <script src="/js/jquery.min.js"></script>
 </head>
 <body>
 <div class="layui-container" style="width: 50%; margin: 50px auto;">
