优化页面交互

--- a/app/view/login/login.phtml
+++ b/app/view/login/login.phtml
@@ -50,7 +50,10 @@
                     data: data.field,
                     success: function (data) {
                         if (~~data.code === 0) {
-                            window.location.pathname = "/";
+                            layer.msg(data.msg, {icon: 6, time: 3}, function() {
+                                window.location.pathname = "/";
+                                return false;
+                            });
                         } else {
                             layer.close(index);
                             layer.msg(data.msg, {icon: 5});
